--- a/project/package.json
+++ b/project/package.json
@@ -44,10 +44,13 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vision-camera": "^4.7.2",
     "react-native-web": "^0.21.0",
-    "react-native-webview": "13.15.0"
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/plugin-transform-export-namespace-from": "^7.27.1",
     "@types/react": "~19.1.10",
     "typescript": "~5.9.2"
   }
