--- a/project/app.json
+++ b/project/app.json
@@ -9,17 +9,29 @@
     "userInterfaceStyle": "dark",
     "newArchEnabled": true,
     "backgroundColor": "#0A1128",
+
     "ios": {
       "supportsTablet": true
     },
+
     "web": {
       "bundler": "metro",
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-web-browser"
+    ],
+
     "experiments": {
       "typedRoutes": true
+    },
+
+    "extra": {
+      "CLOUDFLARE_WORKER_URL": "https://ayusetuxr.udhav355.workers.dev"
     }
   }
 }
