feat: agregar configuración de eas y actualizar dependencias de expo

--- a/project/app.json
+++ b/project/app.json
@@ -9,29 +9,32 @@
     "userInterfaceStyle": "dark",
     "newArchEnabled": true,
     "backgroundColor": "#0A1128",
-
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.ayusetu"
     },
-
     "web": {
       "bundler": "metro",
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-
     "plugins": [
       "expo-router",
       "expo-font",
       "expo-web-browser"
     ],
-
     "experiments": {
       "typedRoutes": true
     },
-
     "extra": {
-      "CLOUDFLARE_WORKER_URL": "https://ayusetuxr.udhav355.workers.dev"
+      "CLOUDFLARE_WORKER_URL": "https://ayusetuxr.udhav355.workers.dev",
+      "router": {},
+      "eas": {
+        "projectId": "dd439bf7-76c0-49e6-890b-7e8962468583"
+      }
+    },
+    "android": {
+      "package": "com.anonymous.ayusetu"
     }
   }
 }
