--- a/project/package.json
+++ b/project/package.json
@@ -7,7 +7,9 @@
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
     "build:web": "expo export --platform web",
     "lint": "expo lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.2",
@@ -23,6 +25,7 @@
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.9",
+    "expo-dev-client": "~6.0.13",
     "expo-device": "^8.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
