--- a/project/package.json
+++ b/project/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.58.0",
+    "buffer": "^6.0.3",
     "expo": "^54.0.12",
     "expo-av": "~16.0.7",
     "expo-blur": "~15.0.7",
@@ -32,6 +33,7 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.8",
+    "expo-sensors": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
