--- a/project/package.json
+++ b/project/package.json
@@ -21,6 +21,8 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.58.0",
+    "@tensorflow-models/face-landmarks-detection": "^1.0.6",
+    "@tensorflow/tfjs": "^4.22.0",
     "buffer": "^6.0.3",
     "expo": "^54.0.12",
     "expo-av": "~16.0.7",
